--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Elastic Stack</title>
+		<link rel="stylesheet" type="text/css" href="demo.css" />
+		<link rel="stylesheet" type="text/css" href="normalize.css" />
 		<link rel="stylesheet" type="text/css" href="component.css" />
 		<script src="modernizr.custom.js"></script>
 	</head>
 	<body>
-		<div class="container">
+		<div class="container" style="overflow: hidden;">
 			<!-- Top Navigation -->
 			<div class="codrops-top clearfix">
 			
