--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script src="modernizr.custom.js"></script>
 	</head>
 	<body>
-		<div class="container" style="overflow: hidden;">
+		<div class="container">
 			<!-- Top Navigation -->
 			<div class="codrops-top clearfix">
 			
